--- a/src/assets/scss/blocks/brands.scss
+++ b/src/assets/scss/blocks/brands.scss
@@ -1,3 +1,5 @@
+
+
 .brandsTitle {
     width: 100%;
     max-width: 130rem;
@@ -11,6 +13,7 @@
   
     @include breakpoint($sm-bp) {
       padding: 0 0.8rem;
+      margin-top: 2rem;
     }
 
     font-family: 'Montserrat';
@@ -20,6 +23,8 @@
     line-height: 4.9rem;
     color: #240E0E;
 }
+
+
 
 .searchBrand {
     background-image: url(../../images/icons/search.svg);
@@ -35,6 +40,14 @@
     outline:none;
     padding-left: 1.5rem;
     background-size: 100%;
+
+    
+}
+
+.product-acc {
+    @include breakpoint($sm-bp) {
+        display: none;
+    }
 }
 
 .searchBrand::-webkit-input-placeholder {
@@ -48,15 +61,36 @@
 
 .redLine {
     border: 1px solid #B71A1B;
+    margin-bottom: 3.9rem;
+    @include breakpoint($sm-bp) {
+        display: none;
+    }
+
+    @include breakpoint($lg-bp) {
+        display: none;
+    }
 }
 
 .mainContent {
-
+margin-bottom: 11.3rem;
+display: flex;
+justify-content: center;
+@include breakpoint($sm-bp) {
+    flex-direction: column;
+    margin-top: 3.9rem;
+}
 
     .mainContentItems {
         display: flex;
-        flex-direction: column;
-        gap: 2rem;
+        gap: 14rem;
+        @include breakpoint($sm-bp) {
+            flex-direction: column;
+            gap: 3.9rem;
+        }
+
+        @include breakpoint($lg-bp) {
+            gap: 2.9rem;
+        }
 
 
         .capitalLetter {
@@ -72,6 +106,11 @@
             line-height: 140%;
             text-align: center;
             color: #000000;
+            margin-bottom: 2rem;
+        }
+
+        .capitalLetter:not(:first-child) {
+            margin-top: 2rem;
         }
 
         .oterText {
@@ -91,6 +130,112 @@
         }
     }
 }
+
+
+.mobilePopularTitle {
+    display: none;
+    height: 8rem;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 2.4rem;
+    text-align: center;
+    color: #FFFFFF;
+    background: #B71A1B;
+
+    @include breakpoint($sm-bp) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+
+.mobileBrandItem {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.logoContainer {
+    display: none;
+    @include breakpoint($sm-bp) {
+        display: flex;
+        justify-content: space-around;
+
+    div {
+        align-self: center;
+
+        .euroChemLogo {
+            width: 15.1rem;
+            height: 3rem;
+        }
+    
+        .rosneftLogo {
+            width: 11.3rem;
+            height: 5.9rem;
+        }
+
+        .nlmkLogo {
+            width: 9.3rem;
+            height: 4.9rem;
+        }
+    }
+
+    }
+    
+}
+
+.mobileBrandItem {
+    margin-top: 2rem;
+}
+
+.chevrondownIco {
+    width: 2.4rem;
+    height: 2.4rem;
+}
+
+.moreBrandsContainer {
+    display: none;
+    @include breakpoint($sm-bp) {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 100%;
+        color: #E30613;
+        display: flex;
+        gap: 0.8rem;
+        justify-content: center;
+        align-items: center;
+        margin-top: 1.8rem;
+        margin-bottom: 4.8rem;
+    }
+}
+
+.containerLogo {
+
+    // .swiper-slide {
+    //     width: 22rem;
+    // }
+
+    // .sliderItem {
+    //     width: 22rem;
+    // }
+    // .swiper-slide-active {
+    //     width: 22rem;
+    // }
+
+    // .swiper-wrapper {
+
+    //     width: 22rem;
+    // }
+}
+
+
+
 
 
 
