create desctop about page

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -103,7 +103,9 @@ svg {
 
 @import "blocks/catalog";
 
-@import "blocks/compare.scss";
+@import "blocks/compare";
+
+@import "blocks/about-page.scss";
 
 @import "blocks/footer";
 
