--- a/src/assets/scss/blocks/brands.scss
+++ b/src/assets/scss/blocks/brands.scss
@@ -60,7 +60,7 @@
 }
 
 .redLine {
-    border: 1px solid #B71A1B;
+    border: 0.1rem solid #B71A1B;
     margin-bottom: 3.9rem;
     @include breakpoint($sm-bp) {
         display: none;
@@ -97,7 +97,7 @@ justify-content: center;
             width: 2.9rem;
             height: 3.4rem;
             opacity: 0.5;
-            border-bottom: 2px solid #000000;
+            border-bottom: 0.2rem solid #000000;
             text-align: center;
             font-family: 'Montserrat';
             font-style: normal;
