added contacts page

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -105,7 +105,9 @@ svg {
 
 @import "blocks/compare";
 
-@import "blocks/about-page.scss";
+@import "blocks/about-page";
+
+@import "blocks/contacts.scss";
 
 @import "blocks/footer";
 
