--- a/src/assets/scss/blocks/article.scss
+++ b/src/assets/scss/blocks/article.scss
@@ -623,6 +623,43 @@
     justify-content: flex-end;
     padding-right: 8.4rem;
     align-items: center;
+
+    @include breakpoint($lg-bp) {
+        display: none;
+        }
+}
+
+
+
+.specificationsBannerMobile {
+    display: none;
+
+    @include breakpoint($lg-bp) {
+        display: flex;
+        background: #B71A1B;
+        width: 100%;
+        height: max-content;
+        
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 2rem;
+        line-height: 2.4rem;
+        color: #FFFFFF;
+        justify-content: space-between;
+        align-items: center;
+        height: 8rem;
+        padding-left: 1.3rem;
+        padding-right: 1.3rem;
+        }
+
+    .specificationsBannerMobileText {
+        @include breakpoint($sm-bp) {
+            width: 17.3rem;
+            height: 4.8rem;
+        }
+    }
+    
 }
 
 .specificationsContainer {
@@ -657,6 +694,14 @@
                 gap: 25.1rem;
                 margin-bottom: 2rem;
 
+                @include breakpoint($lg-bp) {
+                    gap: 17rem;
+                }
+
+                @include breakpoint($sm-bp) {
+                    flex-direction: column;
+                    gap: 0.4rem;
+                }
 
                 td:first-child {
                     width: 16rem;
@@ -670,11 +715,15 @@
 
                 td:last-child {
                     font-family: 'Montserrat';
+                    width: 45.5rem;
                     font-style: normal;
                     font-weight: 400;
                     font-size: 1.6rem;
                     line-height: 100%;
                     color: #000000;
+                    @include breakpoint($sm-bp) {
+                        width: 35rem;
+                    }
 
                     a {
                         color: #0866BD;
@@ -689,6 +738,9 @@
 .mediaBannerContainer {
     background-color: #000000;
     display: flex;
+    @include breakpoint($lg-bp) {
+        flex-direction: column;
+    }
 
     .mediaBannerConnectContainer {
         display: flex;
@@ -696,6 +748,22 @@
         gap: 2.7rem;
         justify-content: center;
         margin-left: 5.2rem;
+
+        @include breakpoint($lg-bp) {
+            margin-left: none;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 2.2rem;
+        }
+
+        @include breakpoint($sm-bp) {
+            margin-left: unset;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 2.2rem;
+            margin-left: 0.8rem;
+            margin-right: 0.8rem;
+        }
     }
 
     .mediaBannerConnectText {
@@ -707,6 +775,17 @@
         line-height: 140%;
         color: #FFFFFF;
         opacity: 0.8;
+
+        @include breakpoint($lg-bp) {
+            flex-direction: column;
+        }
+
+        @include breakpoint($sm-bp) {
+            width: 100%; 
+            padding: 0rem;
+            padding-left: 1.2rem;
+            padding-right: 0.8rem;
+        }
     }
 
     button {
@@ -721,13 +800,20 @@
         border: none;
         width: 28.5rem;
         height: 5.6rem;
+
+        @include breakpoint($sm-bp) {
+            width: 100%; 
+            padding: 0rem;
+            padding-left: 0.8rem;
+            padding-right: 0.8rem;
+        }
     }
 
     .mediaBanner {
         width: 94.25rem;
         height: 24.3rem;
-        background: #2E2A2B;
-        background:linear-gradient(-115deg, transparent 10.5rem, #B71A1B 0);
+        // background-image: url(..);
+        background: linear-gradient(-115deg, transparent 10.5rem, #B71A1B 0);
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 300;
@@ -738,6 +824,20 @@
         justify-content: flex-end;
         padding-right: 8.4rem;
         align-items: center;
+        @include breakpoint($sm-bp) {
+            flex-direction: column;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            padding: 0rem;
+            height: 19.2rem;
+        }
+
+        @include breakpoint($lg-bp) {
+            justify-content: center;
+            background: linear-gradient(-3deg, transparent 6rem, #B71A1B 0);
+        }
+
     
         .mediaBannerText {
             width: 49.9rem;
@@ -747,6 +847,20 @@
             font-size: 3.2rem;
             line-height: 140%;
             color: #FFFFFF;
+            @include breakpoint($lg-bp) {
+                text-align: center;
+            }
+
+            @include breakpoint($sm-bp) {
+                font-family: 'Montserrat';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 1.8rem;
+                line-height: 2.2rem;
+                text-align: center;
+                color: #FFFFFF;
+                width: 24.8rem;
+            }
         }
     }
 }
@@ -807,9 +921,5 @@
     }
    }
 }
-
-
-
-
 
 
