--- a/src/assets/scss/blocks/article.scss
+++ b/src/assets/scss/blocks/article.scss
@@ -13,7 +13,7 @@
         width: 77.15rem;
         height: 8.2rem;
         background: #2E2A2B;
-        background:linear-gradient(-127deg, transparent 5rem, #2E2A2B 0);
+        clip-path: polygon(0 0, 93% 0, 100% 100%, 0% 100%);
         position: relative;
         font-family: 'Montserrat';
         font-style: normal;
@@ -387,7 +387,7 @@
     width: 77.15rem;
     height: 8.2rem;
     background: #2E2A2B;
-    background:linear-gradient(-127deg, transparent 5rem, #2E2A2B 0);
+    clip-path: polygon(0 0, 93% 0, 100% 100%, 0% 100%);
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
@@ -611,8 +611,8 @@
 .specificationsBanner {
     width: 87.35rem;
     height: 8.2rem;
-    background: #2E2A2B;
-    background:linear-gradient(-127deg, transparent 5rem, #B71A1B 0);
+    background: #B71A1B;
+    clip-path: polygon(0 0, 93% 0, 100% 100%, 0% 100%);
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
@@ -813,7 +813,8 @@
         width: 94.25rem;
         height: 24.3rem;
         // background-image: url(..);
-        background: linear-gradient(-115deg, transparent 10.5rem, #B71A1B 0);
+        background-color: #B71A1B;
+        clip-path: polygon(0 0, 93% 0, 100% 100%, 0% 100%);
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 300;
@@ -835,7 +836,8 @@
 
         @include breakpoint($lg-bp) {
             justify-content: center;
-            background: linear-gradient(-3deg, transparent 6rem, #B71A1B 0);
+            background: #B71A1B;
+            clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
         }
 
     
