--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -456,6 +456,8 @@
       flex-direction: column;
       align-items: flex-start;
       padding-left: 5rem;
+      gap: 1.6rem;
+      padding-top: 1.8rem;
 
       button {
         border: none;
@@ -467,6 +469,16 @@
         font-size: 1.6rem;
         line-height: 2rem;
         color: #FFFFFF;
+        align-items: center;
+        gap: 1.8rem;
+        display: flex;
+
+        svg {
+          width: 2.8rem;
+          height: 2.8rem;
+          fill: #FFFFFF;
+          opacity: 0.6;
+        }
       }
     }
 
@@ -503,6 +515,151 @@
     display: flex;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.slickyMenuContainer {
+  background: #231F20;
+  display: none;
+  position: absolute;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  color: #FFFFFF;
+  height: 90rem;
+  border-top: 0.2rem solid #393536;
+  z-index: 9999;
+  width: 100%;
+  top: 5rem;
+  left: 0;
+  
+
+  .textContainer {
+    padding-left: 6.2rem;
+  }
+
+  .text {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2.6rem;
+    opacity: 0.7;
+  }
+  
+  .titleText {
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+    margin-top: 4rem;
+  }
+  
+
+  .menuTabsContainer {
+    display: flex;
+    flex-direction: column;
+
+    .generalTabs {
+      display: flex;
+      align-items: center;
+      border-bottom: 0.2rem solid #393536;
+      padding-top: 4rem;
+      padding-left: 5rem;
+      gap: 2.8rem;
+
+      .changeCategoryActive {
+        border-bottom: 0.3rem solid #E30613;
+      }
+      
+      button {
+        border: none;
+        background: unset;
+        opacity: none;
+        color: #FFFFFF;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        padding-bottom: 1rem;
+      }
+    }
+
+
+    .menuTabs2 {
+      display: none;
+      flex-direction: column;
+      align-items: flex-start;
+      padding-left: 5rem;
+      gap: 1.6rem;
+      padding-top: 1.8rem;
+
+      button {
+        border: none;
+        background: unset;
+        opacity: none;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        color: #FFFFFF;
+        align-items: center;
+        gap: 1.8rem;
+        display: flex;
+
+        svg {
+          width: 2.8rem;
+          height: 2.8rem;
+          fill: #FFFFFF;
+          opacity: 0.6;
+        }
+      }
+    }
+
+    .menuTabsActive {
+      display: flex;
+    }
+  }
+
+  .menuContentContainer2 {
+    display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border-left: 0.2rem solid #393536;
+  }
+
+  .contentActive {
+    display: flex;
+    
+  }
+}
+
+
+.headerButtonSecond:hover {
+  .slickyMenuContainer{
+    display: flex;
+  }
+}
+
+
+
 
 
 
