complited compare page

--- a/src/assets/scss/blocks/brandsSecondLevel.scss
+++ b/src/assets/scss/blocks/brandsSecondLevel.scss
@@ -503,11 +503,11 @@
         }
       }
 
-.container {
-  @include breakpoint($sm-bp) {
-    padding: 0;
-  }
-}
+// .container {
+//   @include breakpoint($sm-bp) {
+//     padding: 0;
+//   }
+// }
 
 .catalogBrands {
   .container {
