--- a/src/assets/scss/blocks/brands.scss
+++ b/src/assets/scss/blocks/brands.scss
@@ -301,8 +301,12 @@ justify-content: center;
     }
     .swiper-slide {
         display: flex;
-        justify-content: center;
+        // justify-content: center;
         align-items: center;
+
+        img {
+            object-fit: contain;
+        }
     }
 }
 
