--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,139 +1,508 @@
+.page {
+  margin-top: 43rem;
+
+  @include breakpoint($lg-bp) {
+    margin-top: 15rem;
+  }
+
+}
+
 .header {
+  position: absolute;
+  top: 0;
+  width: 100%;
   padding: 6rem 0 4.2rem;
 
   background: url(../images/header-bg.png) no-repeat;
   background-size: cover;
+
   @include breakpoint($lg-bp) {
-    display: none;
+    padding: 0;
+    height: 14rem;
+    display: flex;
+    justify-content: center;
+    
+    flex-direction: column;
   }
-}
-
-.header__top {
-  display: flex;
-  align-items: center;
-
-  margin-bottom: 11rem;
-}
-
-.header__logo-link:hover {
-  svg {
-    fill: $primary;
-  }
-}
-
-.header__logo {
-  margin-right: 12.5rem;
-}
-
-.header__logo-icon {
-  width: 40.7rem;
-  height: 11.3rem;
-
-  fill: white;
-
-  margin-bottom: 1.7rem;
-}
-
-.header__logo-descr {
-  font-size: 2rem;
-  line-height: 1.4;
-  color: white;
-}
-
-.header__top-links {
-  display: flex;
-
-  margin-top: 5rem;
-}
-
-.header__top-link {
-  font-size: 1.4rem;
-  font-weight: 300;
-  color: white;
-
-  border-bottom: 0.1rem dashed white;
-
-  & + & {
-    margin-left: 3.2rem;
-  }
-}
-
-.header__bottom {
-  display: flex;
-  align-items: center;
-}
-
-.header__catalog-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 25.6rem;
-
-  margin-right: 8rem;
-
-  svg {
-    width: 2.4rem;
-    height: 2.4rem;
-
-    fill: white;
-
-    margin-right: 1.8rem;
+  
+  .headerButton {
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
   }
 
-  &:hover {
+  .helper {
+    position: relative;
+  }
+
+  .container {
+    max-width: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .header__top {
+    display: flex;
+    align-items: center;
+    max-width: 130rem;
+    margin: 0 auto;
+    margin-bottom: 11rem;
+
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
+  }
+  
+  .header__logo-link:hover {
     svg {
       fill: $primary;
     }
   }
-}
-
-.header__nav {
-  display: flex;
-}
-
-.header__nav-link {
-  color: white;
-
-  & + & {
-    margin-left: 6rem;
+  
+  .header__logo {
+    margin-right: 12.5rem;
   }
-}
-
-.header__btns {
-  display: flex;
-  align-items: center;
-
-  margin-left: auto;
-
-  svg {
-    width: 2.8rem;
-    height: 2.8rem;
+  
+  .header__logo-icon {
+    width: 40.7rem;
+    height: 11.3rem;
+  
+    fill: white;
+  
+    margin-bottom: 1.7rem;
   }
-}
+  
+  .header__logo-descr {
+    font-size: 2rem;
+    line-height: 1.4;
+    color: white;
 
-.header__search {
-  margin-right: 2.4rem;
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
+  }
+  
+  .header__top-links {
+    display: flex;
+    margin-top: 5rem;
 
-  background-color: transparent;
-  border: none;
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
+  }
+  
+  .header__top-link {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: white;
+  
+    border-bottom: 0.1rem dashed white;
+  
+    & + & {
+      margin-left: 3.2rem;
+    }
+  }
+  
+  .header__bottom {
+    
+    // position: relative;
 
-  svg {
-    stroke: rgba(255, 255, 255, 0.4);
-    fill: transparent;
+    .helpPozContainer {
+      display: flex;
+      align-items: center;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 130rem;
 
+
+      @include breakpoint($lg-bp) {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        .mobileLogoLink {
+          display: block;
+        }
+      }
+      
+    }
+  
+    .mobileLogoLink {
+      fill: #FFFFFF;
+      width: 12.7rem;
+      height: 3.5rem;
+
+      .mobileLogo {
+        width: 12.7rem;
+        height: 3.5rem;
+      }
+      display: none;
+    }
+  }
+  
+  .header__catalog-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    width: 25.6rem;
+  
+    margin-right: 8rem;
+  
+    svg {
+      width: 2.4rem;
+      height: 2.4rem;
+  
+      fill: white;
+  
+      margin-right: 1.8rem;
+    }
+  
     &:hover {
-      stroke: white;
+      svg {
+        fill: $primary;
+      }
+    }
+  }
+  
+  .header__nav {
+    display: flex;
+    gap: 6rem;
+
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
+
+  }
+  
+  .header__nav-link {
+    color: white;
+  
+    & + & {
+      margin-left: 6rem;
+    }
+  }
+  
+  .header__btns {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+
+    @include breakpoint($lg-bp) {
+      gap: 2rem;
+    }
+  
+    svg {
+      width: 2.8rem;
+      height: 2.8rem;
+    }
+
+    .burgerIcon {
+      background: none;
+      border: none;
+
+      svg {
+        
+        fill: #FFFFFF;
+        display: none;
+        @include breakpoint($lg-bp) {
+          display: block;
+        }
+      }
+    }
+  }
+  
+  .header__search {
+    margin-right: 2.4rem;
+  
+    background-color: transparent;
+    border: none;
+    
+    @include breakpoint($lg-bp) {
+      margin-right: 0;
+    }
+
+    svg {
+      stroke: rgba(255, 255, 255, 0.4);
+      fill: transparent;
+  
+      &:hover {
+        stroke: white;
+      }
+    }
+  }
+  
+  .header__compare {
+    svg {
+      fill: rgba(255, 255, 255, 0.5);
+  
+      &:hover {
+        fill: white;
+      }
     }
   }
 }
 
-.header__compare {
-  svg {
-    fill: rgba(255, 255, 255, 0.5);
+/////////////////////////////////////////////////////////////
 
-    &:hover {
+.hiddenHeader {
+  display: none;
+  transform: translateY(-9rem);
+  transition: all 0.5s;
+  
+  @include breakpoint($lg-bp) {
+    transform: translateY(-15rem);
+  }
+  
+}
+
+.hiddenHeaderHelp {
+  display: none;
+}
+
+.showHeader {
+  display: block;
+  
+  transition: all 0.5s;
+}
+
+
+
+.headerTransform {  
+  transition: all 0.5s;
+  background: url(../images/header-bg.png) no-repeat;
+  background-size: cover;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 11;
+  
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  
+  
+  @include breakpoint($lg-bp) {
+    height: 14rem;
+  }
+
+  .headerButton {
+    // margin-left: 10rem;
+
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
+  }
+
+  .header__btns {
+    // margin-left: 40rem;
+
+    .burgerIcon {
+      background: none;
+      border: none;
+
+      svg {
+        
+        fill: #FFFFFF;
+        display: none;
+        @include breakpoint($lg-bp) {
+          display: block;
+        }
+      }
+    }
+  }
+
+  .container {
+    max-width: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  #hid {
+    display: none;
+  }
+  
+  .header__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 11rem;
+    display: none;
+
+    
+
+  }
+  
+  .header__logo-link:hover {
+    svg {
+      fill: $primary;
+    }
+  }
+  
+  .header__logo {
+    margin-right: 12.5rem;
+    display: none;
+  }
+  
+  .header__logo-icon {
+    width: 40.7rem;
+    height: 11.3rem;
+  
+    fill: white;
+  
+    margin-bottom: 1.7rem;
+  }
+  
+  .header__logo-descr {
+    font-size: 2rem;
+    line-height: 1.4;
+    color: white;
+  }
+  
+  .header__top-links {
+    display: none;
+  
+    margin-top: 5rem;
+  }
+  
+  .header__top-link {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: white;
+  
+    border-bottom: 0.1rem dashed white;
+  
+    & + & {
+      margin-left: 3.2rem;
+    }
+  }
+  
+  .header__bottom {
+    
+    position: relative;
+
+    .helpPozContainer {
+      display: flex;
+      align-items: center;
+      gap: 10rem;
+
+      
+      
+      @include breakpoint($hm-bp) {
+        gap: 5rem;
+      }
+
+      @include breakpoint($lg-bp) {
+        justify-content: space-between;
+      }
+
+    }
+  
+    .mobileLogoLink {
+      fill: #FFFFFF;
+      width: 12.7rem;
+      height: 3.5rem;
+      margin-left: 10rem;
+
+      @include breakpoint($hm-bp) {
+        margin-left: 1rem;
+      }
+
+      .mobileLogo {
+        @include breakpoint($lg-bp) {
+          width: 13.3rem;
+          height: 3.7rem;
+        }
+      }
+
+      .mobileLogo {
+        width: 12.7rem;
+        height: 3.5rem;
+      }
+      display: block;
+    }
+  }
+  
+  .header__catalog-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    width: 25.6rem;
+  
+    margin-right: 8rem;
+  
+    svg {
+      width: 2.4rem;
+      height: 2.4rem;
+  
       fill: white;
+  
+      margin-right: 1.8rem;
+    }
+  
+    &:hover {
+      svg {
+        fill: $primary;
+      }
+    }
+  }
+  
+  .header__nav {
+    display: flex;
+    gap: 6rem;
+
+    @include breakpoint($lg-bp) {
+      display: none;
+    }
+  }
+  
+  .header__nav-link {
+    color: white;
+  
+    & + & {
+      margin-left: 6rem;
+    }
+  }
+  
+  .header__btns {
+    display: flex;
+    align-items: center;
+  
+    @include breakpoint($lg-bp) {
+      gap: 2rem;
+    }
+
+    svg {
+      width: 2.8rem;
+      height: 2.8rem;
+    }
+  }
+  
+  .header__search {
+    margin-right: 2.4rem;
+  
+    background-color: transparent;
+    border: none;
+    
+    @include breakpoint($lg-bp) {
+      margin-right: 0;
+    }
+    svg {
+      stroke: rgba(255, 255, 255, 0.4);
+      fill: transparent;
+  
+      &:hover {
+        stroke: white;
+      }
+    }
+  }
+  
+  .header__compare {
+    svg {
+      fill: rgba(255, 255, 255, 0.5);
+  
+      &:hover {
+        fill: white;
+      }
     }
   }
 }
@@ -144,7 +513,7 @@
 
 
 .headerMobile {
-  display: none;
+  display: block;
   width: 100%;
 	transition: all 0.3s ease;
 
@@ -178,6 +547,7 @@
       width: 13.3rem;
       height: 3.7rem;
       fill: white;
+      
   
     }
   }
@@ -392,16 +762,20 @@
   font-size: 1.6rem;
   line-height: 2rem;
   color: #FFFFFF;
-  height: 90rem;
+  height: 80vh;
+  // height: max-content;
   border-top: 0.2rem solid #393536;
-  z-index: 9999;
-  width: 100%;
-  top: 38.5rem;
+  z-index: 10;
+  width: 100vw;
+  top: 5.6rem;
   left: 0;
-  
+  // gap: 2rem;
 
   .textContainer {
-    padding-left: 6.2rem;
+    // display: flex;
+    // flex-direction: column;
+    // flex-wrap: wrap;
+    margin-left: 3rem;
   }
 
   .text {
@@ -409,6 +783,19 @@
     font-size: 1.4rem;
     line-height: 2.6rem;
     opacity: 0.7;
+    max-width: 27rem;
+    display: flex;
+    flex-direction: column;
+    
+
+    a {
+      text-decoration: none;
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2.6rem;
+      color: #FFFFFF;
+      opacity: 0.7;
+    }
   }
   
   .titleText {
@@ -489,9 +876,15 @@
 
   .menuContentContainer {
     display: none;
-    flex-direction: column;
+    gap: 10rem;
     flex-wrap: wrap;
     border-left: 0.2rem solid #393536;
+    overflow: scroll;
+
+    @include breakpoint($gb-bp) {
+      gap: 1rem;
+    }
+
   }
 
   .contentActive {
@@ -511,155 +904,136 @@
 
 
 .headerButton:hover {
-  .menuContainer {
-    display: flex;
-  }
+  
+
+  // .slickyMenuContainer{
+  //   display: flex;
+  // }
+}
+
+.menuContainerActive {
+  display: flex;
+}
+
+.burgerMenuContainer {
+  display: block;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.slickyMenuContainer {
-  background: #231F20;
-  display: none;
-  position: absolute;
+.mobileMenu {
   font-family: 'Montserrat';
   font-style: normal;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 2rem;
-  color: #FFFFFF;
-  height: 90rem;
-  border-top: 0.2rem solid #393536;
-  z-index: 9999;
+  position: absolute;
+  z-index: 99;
   width: 100%;
-  top: 5rem;
-  left: 0;
-  
+  background: #231F20;
+  .generalTabs {
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 0.2rem solid #ffffff7e;
+    border-top: 0.2rem solid #ffffff7e;
 
-  .textContainer {
-    padding-left: 6.2rem;
+    .changeCategoryActiveMobile {
+      border-bottom: 0.3rem solid #E30613;
+    }
+
+    button {
+      background: none;
+      border: none;
+      font-weight: 300;
+      font-size: 1.4rem;
+      line-height: 2rem;
+      color: #FFFFFF;
+      padding-top: 1.6rem;
+      padding-bottom: 0.9rem;
+      
+    }
+
   }
 
-  .text {
+  .menuControlTitle {
+    display: flex;
+    background: none;
+    border: none;
     font-weight: 400;
     font-size: 1.4rem;
-    line-height: 2.6rem;
-    opacity: 0.7;
-  }
-  
-  .titleText {
-    font-weight: 500;
-    font-size: 1.8rem;
     line-height: 2rem;
-    margin-bottom: 1rem;
-    margin-top: 4rem;
-  }
-  
-
-  .menuTabsContainer {
-    display: flex;
-    flex-direction: column;
-
-    .generalTabs {
-      display: flex;
-      align-items: center;
-      border-bottom: 0.2rem solid #393536;
-      padding-top: 4rem;
-      padding-left: 5rem;
-      gap: 2.8rem;
-
-      .changeCategoryActive {
-        border-bottom: 0.3rem solid #E30613;
-      }
-      
-      button {
-        border: none;
-        background: unset;
-        opacity: none;
-        color: #FFFFFF;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.6rem;
-        line-height: 2rem;
-        padding-bottom: 1rem;
-      }
+    color: #FFFFFF;
+    svg {
+      width: 2rem;
+      height: 2rem;
+      fill: #ffffff83;
     }
-
-
-    .menuTabs2 {
-      display: none;
-      flex-direction: column;
-      align-items: flex-start;
-      padding-left: 5rem;
-      gap: 1.6rem;
-      padding-top: 1.8rem;
-
-      button {
-        border: none;
-        background: unset;
-        opacity: none;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.6rem;
-        line-height: 2rem;
-        color: #FFFFFF;
-        align-items: center;
-        gap: 1.8rem;
-        display: flex;
-
-        svg {
-          width: 2.8rem;
-          height: 2.8rem;
-          fill: #FFFFFF;
-          opacity: 0.6;
-        }
-      }
-    }
-
-    .menuTabsActive {
-      display: flex;
-    }
-  }
-
-  .menuContentContainer2 {
-    display: none;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border-left: 0.2rem solid #393536;
-  }
-
-  .contentActive {
-    display: flex;
     
   }
-}
+
+  .menuTabs {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: none;
+    .menuControlTitle {
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2rem;
+      color: #FFFFFF;
+      display: flex;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      border-bottom : 0.1rem solid #FFFFFF;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+
+      .imgTextContainer {
+        display: flex;
+        gap: 1.2rem;
+      }
+
+      p {
+        text-align: start;
+      }
 
 
-.headerButtonSecond:hover {
-  .slickyMenuContainer{
-    display: flex;
+      .arrow {
+        width: 1rem;
+        height: 1rem;
+        border-top: 0.2rem solid #FFFFFF;
+        border-right: 0.2rem solid #FFFFFF;
+        transform: rotate(45deg);
+        
+      }
+    }
+
+    
   }
+  .menuTabsActiveMobile {
+    display: block;
+  }
+
+  .menuContentContainer {
+    display: none;
+
+    .titleText {
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2rem;
+      color: #FFFFFF;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+  }
+  
+
+  .text {
+    display: none;
+  }
+
+  .contentActiveMobile {
+    display: block;
+    
+  }
+
+  
+  
 }
-
-
-
-
-
-
